spykshrk/realtime/rst/RStarTree.h

#define boolean int

#define int int /**V**/ /* large data sets require a 32 bit int */



typedef float  typatomkey; /**V**/


        /* typatomkey may be of any type as far as the standard comparisons
           apply */


typedef struct {
               typatomkey  l, h;
               } typinterval;



typedef typinterval  typrect[NumbOfDim];


        /* A typrect is the key type an R*-tree handles. The smallest
           entity which may be used as a key is an interval,
           i.e. a typrect[1]. */


typedef struct {
               int  contents; /**V**/
               } typinfo, *refinfo;


/* ----------------------------- R*-tree ------------------------------- */

typedef rstree  *RSTREE; /* R*-tree identifier */



/* ------------------------- procedure types --------------------------- */

typedef boolean (*DirQueryProc) (RSTREE   /* rst */,
                                 typrect  /* dirrect */,
                                 typrect  /* queryrect1 */,
                                 typrect  /* queryrect2 */);


        /* rst:
           contains the R*-tree identifier as passed to the procedures
           RegionQuery, ExistsRegion and RegionCount respectively.
           
           dirrect:
           contains a multidimensional directory rectangle.
           
           queryrect1, queryrect2:
           contain queryrect1 and queryrect2 as passed to the procedures
           RegionQuery, ExistsRegion and RegionCount respectively.
           
           This type is also used in the JoinXX procedures to perform the
           join. Then the parameters will have a slightly different
           contents, see the JoinXX procedures. */


typedef boolean (*DataQueryProc) (RSTREE   /* rst */,
                                  typrect  /* datarect */,
                                  typrect  /* queryrect1 */,
                                  typrect  /* queryrect2 */);


        /* rst:
           contains the R*-tree identifier as passed to the procedures
           RegionQuery, ExistsRegion and RegionCount respectively.
           
           datarect:
           contains a multidimensional data rectangle.
           
           queryrect1, queryrect2:
           contain queryrect1 and queryrect2 as passed to the procedures
           RegionQuery, ExistsRegion and RegionCount respectively.
           
           This type is also used in the JoinXX procedures to perform the
           join. Then the parameters will have a slightly different
           contents, see the JoinXX procedures. */


typedef void (*QueryManageProc) (RSTREE    /* rst */,
                                 typrect   /* rectangle */,
                                 refinfo   /* info */,
                                 void*     /* pointer */,
                                 boolean*  /* modify */,
                                 boolean*  /* finish */);


        /* rst:
           contains the R*-tree identifier as passed to the procedure
           RegionQuery.
           
           rectangle:
           contains the multidimensional data rectangle currently found.
           
           info:
           points to the concerning information part.
           
           pointer:
           is an arbitrary pointer as passed to the procedure RegionQuery.
           It may be used as a pointer to a buffer structure.
           
           modify:
           points to a flag labeling the node to be written back.
           BEWARE:
           record modified  |  modify  |  result
           --------------------------------------------------------
                 no         |  FALSE   |  record is not modified
                 no         |  TRUE    |  undefined
                 yes        |  FALSE   |  undefined
                 yes        |  TRUE    |  record is modified
           (See also RegionQuery)
           
           finish:
           points to a flag labeling the query to be finished when the
           procedure is left. */


typedef void (*JoinManageProc) (RSTREE    /* rst1 */,
                                RSTREE    /* rst2 */,
                                typrect   /* rectangle1 */,
                                typrect   /* rectangle2 */,
                                refinfo   /* info1 */ ,
                                refinfo   /* info2 */,
                                void*     /* pointer1 */,
                                void*     /* pointer2 */,
                                boolean*  /* finish */);


        /* rst1, rst2:
           contain the R*-tree identifiers as passed to the JoinXX
           procedures.
           
           rectangle1, rectangle2:
           contain the two rectangles currently found by the join.
           
           info1, info2:
           point to the concerning information parts.
           
           pointer1, pointer2:
           are arbitrary pointers as passed to the JoinXX procedures.
           They may be used as pointers to buffer structures.
           
           finish:
           points to a flag labeling the join to be finished when the
           procedure is left. */


/* ---------------------- procedure declarations ----------------------- */

/*
              Almost all procedures return a boolean result.
     If a procedure returns FALSE an error has occured. The implementation
     attempts to detect errors before any update operations are performed.
*/


void     NoRSTree(RSTREE *rst);


         /* Initializes an R*-tree identifier (at least sets *rst to NULL).
            Each procedure which requires an R*-tree identifier checks the
            value of this identifier at its entry.
            OpenRST for example demands a NULL identifier while CloseRST
            demands a non NULL identifier. */


boolean  CreateRST(char     *name,
                   int      pagesize,
                   boolean  unique);


         /* CreateRST creates an R*-tree on secondary memory.
            To work on it, it has to be opened by the procedure OpenRST.
            
            name:
            is the main filename under which the created R*-tree will be
            stored, additionally a few files named filename.suffix with
            different suffixes will be created. name is not fixed in the
            internal parameter table, thus after renaming the files, the
            R*-tree may be opened under another name.
            
            pagesize:
            is the size in bytes, a page (directory or data) will occupy.
            
            unique:
            if unique is set TRUE the procedure InsertRecord will not store
            more than one record with the same rectangle (key) in the
            R*-tree (rectangles will be real keys).
            The unique flag may be reset with the procedure SetUnique
            without further internal tests. */


boolean  RemoveRST(char *name);


         /* RemoveRST removes all files corresponding to an R*-tree. */


boolean  OpenRST(RSTREE  *rst,
                 char    *name);


         /* OpenRST opens the R*-tree named name. */


boolean  CloseRST(RSTREE *rst);


         /* The unique state, defined in procedure CreateRST may be reset
            by this procedure (see also CreateRST). The unique flag is set
            without internal checks (even to TRUE). */


boolean  InquireRSTDesc(RSTREE   rst,
                        char     *name,
                        int      *numbofdim,
                        int      *sizedirentry,
                        int      *sizedataentry,
                        int      *sizeinfo,
                        int      *maxdirfanout,
                        int      *maxdatafanout,
                        int      *pagesize,
                        int      *numbofdirpages,
                        int      *numbofdatapages,
                        int      pagesperlevel[],
                        int      *numbofrecords,
                        int      *height,
                        boolean  *unique);


         /* InquireRSTDesc provides some useful information about the
            R*-tree referenced by rst.
            
            name: see CreateRST.
            
            numbofdim:
            contains the number of dimensions of the R*-tree referenced by
            rst, i.e. the value the constant NumbOfDim was set to when it
            was created.
            
            sizedirentry, sizedataentry:
            contain the size (in bytes) of a directory and data entry
            respectively.
            
            sizeinfo:
            contains the size (in bytes) of an information part.
            
            maxdirfanout, maxdatafanout:
            contain the maximum possible number of entries a directory
            and data node respectively can store.
            
            pagesize: see CreateRST.
            
            numbofdirpages, numbofdatapages:
            total number of directory and data pages respectively in use.
            
            pagesperlevel:
            For each level i, beginning at the root, pagesperlevel[i]
            contains the number of pages in use.
            
            numbofrecords:
            total number of data records stored in the R*-tree.
            
            height:
            height of the tree, the lowest height is "1" (only the root
            exists).
            
            unique: see CreateRST. */


boolean  InsertRecord(RSTREE   rst,
                      typrect  rectangle,
                      typinfo  *info,
                      boolean  *inserted);


         /* RegionCount performs a RegionQuery on the R*-tree referenced
            by rst. It does not return records but only counts the number
            of records found.
            See also RegionQuery.
            
            recordcount:
            is set to the number of records satisfying the query
            condition. */


boolean  RegionQuery(RSTREE           rst,
                     typrect          queryrect1,
                     typrect          queryrect2,
                     DirQueryProc     DirQuery,
                     DataQueryProc    DatQuery,
                     QueryManageProc  Manage,
                     void             *pointer);